# annex4-cli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  regulation-integrity.yml  release.yml
annex4/: __init__.py
annex4/bundle/: __init__.py  engine.py
annex4/classifier/: engine.py  models.py
annex4/cli/: __init__.py  __main__.py  disclaimer.py
annex4/core/: diff.py  merge.py  schema.py  validate.py
annex4/dossier/: generator.py
annex4/generator/: engine.py
annex4/generator/templates/: annex_iv.md.j2  annex_iv_dossier.md.j2
annex4/ingestors/: base.py  giskard_ingestor.py  hf_ingestor.py  mlflow_ingestor.py  yaml_override.py
annex4/ingestors/_stubs/: azureml.py  databricks.py  sagemaker.py  vertex.py
annex4/regulation/: loader.py  models.py  search.py
annex4/regulation/versions/2024-1689_base/: diff_substantiality.yaml  disclaimers.yaml  field_kinds.yaml  harmonised_standards.yaml  metadata.yaml  recitals.yaml
annex4/regulation/versions/2024-1689_base/annexes/: annex_i.yaml  annex_ii.yaml  annex_iii.yaml  annex_iv.yaml
annex4/regulation/versions/2024-1689_base/articles/: article_1.yaml  article_10.yaml  article_11.yaml  article_13.yaml  article_14.yaml  article_15.yaml  article_16.yaml  article_26.yaml  article_3.yaml  article_43.yaml  article_47.yaml  article_5.yaml  article_6.yaml  article_72.yaml  article_73.yaml  article_9.yaml
annex4/regulation/versions/2024-1689_base/classification_rules/: classifier.yaml
annex4/regulation/versions/2024-1689_base/mappings/: articles_to_annex_iv.yaml
annex4/render/: html.py  pdf.py
annex4/render/templates/: base.html  cover.html  diff_report.html  diff_report.md  section_6_standards.html  toc.html
annex4/schemas/: generator.py
docs/: install.md
docs/commands/: diff.md
docs/ingestors/: mlflow.md
docs/regulation/: annex_iv_source.md
examples/: credit_scoring.yaml  hr_screening.yaml  hr_screening_v1.yaml  hr_screening_v2.yaml  medical_triage.yaml  train_demo.py
examples/rendered/: credit_scoring.html  hr_screening.html  medical_triage.html
tests/: conftest.py  test_bundle.py  test_classifier.py  test_cli.py  test_diff.py  test_disclaimer_hardening.py  test_dossier.py  test_generator.py  test_giskard_ingestor.py  test_hf_ingestor.py  test_merge.py  test_mlflow_ingestor.py  test_regulation_integrity.py  test_regulation_loader.py  test_render_html.py  test_render_pdf.py  test_schema.py  test_schemas.py  test_search.py  test_validate.py
tests/fixtures/: mlflow_run.json
tests/fixtures/snapshots/: hr_screening_diff.md
