[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annex4-cli"
version = "0.1.0"
description = "EU AI Act (Regulation (EU) 2024/1689) Annex IV technical documentation generator — informational tool, not legal advice"
authors = [{ name = "Jerry Whites" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = [
    "eu-ai-act",
    "annex-iv",
    "compliance",
    "mlops",
    "mlflow",
    "huggingface",
    "regulation",
    "ai-governance",
    "not-legal-advice",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click",
    "rich",
    "pydantic>=2",
    "pyyaml",
    "jinja2",
    "jsonschema",
]

[project.optional-dependencies]
pdf = ["weasyprint"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "pypdf",
]

[project.urls]
Homepage = "https://github.com/JerryWhites/annex4-cli"
Documentation = "https://github.com/JerryWhites/annex4-cli#readme"
Repository = "https://github.com/JerryWhites/annex4-cli"
Issues = "https://github.com/JerryWhites/annex4-cli/issues"
Changelog = "https://github.com/JerryWhites/annex4-cli/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["annex4*"]

[project.scripts]
annex4 = "annex4.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
omit = [
    "annex4/cli.py",           # shadowed by annex4/cli/ package — dead code
    "annex4/ingestors/_stubs/*",  # cloud provider stubs — not implemented
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pragma: no cover",
]
